fix Documentation, Format Code, Added new balance type Both for failed Withdrawals